--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
+
 <head>
     <meta charset="UTF-8">
     <title>Charity</title>
@@ -7,20 +8,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.css" type="text/css" />
     <link rel="stylesheet" href="css/grid.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/media.css" type="text/css" />
 </head>
+
 <body>
     <header>
-         <div class="overlay"></div>
+        <div class="overlay"></div>
         <div class="container">
             <div class="row">
-                <div class="col-sm-2 col-md-4">
+                <div class="col-xs-10 col-sm-2 col-md-2">
                     <div class="logo">
                         <a href="#">Charity</a>
                     </div>
                 </div>
-                <div class=" col-sm-10 col-md-8">
-                    <nav>
+                <div class="col-xs-2">
+                    <div class="btn_menu_wrap">
+                        <a id="nav-toggle" class="nav_slide_button" href="#"><span></span></a>
+                    </div>
+
+                </div>
+                <div class="col-xs-12 col-sm-10 col-md-10">
+                    <nav class="nav">
                         <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Discover</a></li>
@@ -28,16 +39,16 @@
                             <li><a href="#">Blog</a></li>
                             <li><a href="#">Shop</a></li>
                             <li><a href="#">Contact</a></li>
-                            <li><a href="#">. . .</a></li>
+                            <li><a href="#"><strong>. . .</strong></a></li>
                         </ul>
                     </nav>
                 </div>
-            </div>    
+            </div>
             <div class="row">
                 <div class="header_content">
                     <h1>Helping People</h1>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                    <button >Get started</button>
+                    <button class="btn">Get started</button>
                 </div>
             </div>
             <div class="row">
@@ -54,24 +65,199 @@
                         <h5>Care about Health</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus deleniti quidem eum est modi id atque accusamus impedit, doloribus </p>
                     </div>
-
                 </div>
             </div>
         </div>
     </header>
-    <section>
+    <section class="live_campaigns section_pading">
         <div class="container">
+            <div class="row">
                 <div class="col-md-12">
+                    <h2>Live Campaigns</h2>
+                    <!-- <div class="live_campaigns_slider"> -->
+                        <!-- <div> -->
+                            <p id="campaigns_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p>
 
                 </div>
+            </div>
+        <div class="row">
+                <div class="live_campaigns_slider">
+                    <div>
+                        <div class="campaign_item">       
+                            <div class="campaign_content">
+                                <img src="img/campaigns_content_1.jpg" alt="campaigns content">
+                                <div class="contant_padding">
+                                    <h4>Urgent rebuilding - 2500 Chennai flood survivors</h4>
+                                    <p class="desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore...</p>
+                                    <i class="icon_map"></i><span>India</span>
+                                    <div class="progres_bar_item">
+                                        <div id="progres_bar_india"></div>
+                                    </div>
+                                    <div class="achievements">
+                                        <p><span class="counts">40%</span>
+                                            <br>funded</p>
+                                        <p><span class="counts">$ 9,707</span>
+                                            <br>pledged</p>
+                                        <p><span class="counts">21</span>
+                                            <br>days to go</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>     
+                    </div>    
+                    <div>
+                         <div class=" campaign_item">
+                            <div class="campaign_content">
+                                <img src="img/campaigns_content_2.jpg" alt="campaigns content">
+                                <div class="contant_padding">
+                                    <h4>Internet Opens New World of Learning Opportunities</h4>
+                                    <p class="desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore...</p>
+                                    <i class="icon_map"></i><span>Sierra Leone</span>
+                                    <div class="progres_bar_item">
+                                        <div id="progres_bar_sierra"></div>
+                                    </div>
+                                    <div class="achievements">
+                                        <p><span class="counts counts_sierra">76%</span>
+                                            <br>funded</p>
+                                        <p><span class="counts">$ 45,176</span>
+                                            <br>pledged</p>
+                                        <p><span class="counts">36</span>
+                                            <br>days to go</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>  
+                    </div>   
+                     <div> 
+                         <div class="campaign_item">
+                            <div class="campaign_content">
+                                <img src="img/campaigns_content_3.jpg" alt="campaigns content">
+                                <div class="contant_padding">
+                                    <h4>Support 8 youth to succeed in school and society</h4>
+                                    <p class="desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore...</p>
+                                    <i class="icon_map"></i><span>Guatemala</span>
+                                    <div class="progres_bar_item">
+                                        <div id="progres_bar_guatemala"></div>
+                                    </div>
+                                    <div class="achievements">
+                                        <p><span class="counts counts_guatemala">6%</span>
+                                            <br>funded</p>
+                                        <p><span class="counts">$ 896</span>
+                                            <br>pledged</p>
+                                        <p><span class="counts">29</span>
+                                            <br>days to go</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div>   
+                         <div class="campaign_item">
+                            <div class="campaign_content">
+                                <img src="img/campaigns_content_4.jpg" alt="campaigns content">
+                                <div class="contant_padding">
+                                    <h4>Use Soap to Empower 60 Rape Survivors in Mali</h4>
+                                    <p class="desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore...</p>
+                                    <i class="icon_map"></i><span>Mali</span>
+                                    <div class="progres_bar_item">
+                                        <div id="progres_bar_mali"></div>
+                                    </div>
+                                    <div class="achievements">
+                                        <p><span class="counts counts_mali">39.03%</span>
+                                            <br>funded</p>
+                                        <p><span class="counts">$ 1,951,5</span>
+                                            <br>pledged</p>
+                                        <p><span class="counts">21</span>
+                                            <br>days to go</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                    <div>
+                         <div class="campaign_item">       
+                            <div class="campaign_content">
+                                <img src="img/campaigns_content_1.jpg" alt="campaigns content">
+                                <div class="contant_padding">
+                                    <h4>Urgent rebuilding - 2500 Chennai flood survivors</h4>
+                                    <p class="desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore...</p>
+                                    <i class="icon_map"></i><span>India</span>
+                                    <div class="progres_bar_item">
+                                        <div id="progres_bar_india"></div>
+                                    </div>
+                                    <div class="achievements">
+                                        <p><span class="counts">40%</span>
+                                            <br>funded</p>
+                                        <p><span class="counts">$ 9,707</span>
+                                            <br>pledged</p>
+                                        <p><span class="counts">21</span>
+                                            <br>days to go</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>   
+                    </div>
+                    <div>
+                        <div class="campaign_item">
+                            <div class="campaign_content">
+                                <img src="img/campaigns_content_3.jpg" alt="campaigns content">
+                                <div class="contant_padding">
+                                    <h4>Support 8 youth to succeed in school and society</h4>
+                                    <p class="desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore...</p>
+                                    <i class="icon_map"></i><span>Guatemala</span>
+                                    <div class="progres_bar_item">
+                                        <div id="progres_bar_guatemala"></div>
+                                    </div>
+                                    <div class="achievements">
+                                        <p><span class="counts counts_guatemala">6%</span>
+                                            <br>funded</p>
+                                        <p><span class="counts">$ 896</span>
+                                            <br>pledged</p>
+                                        <p><span class="counts">29</span>
+                                            <br>days to go</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+            </div>
+            </div>
+            <button class="btn all_campaigns">View all campaigns</button>
+        <!-- </div> -->
+    </section>
+
+    <article id="story">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12  col-sm-8  col-sm-offset-4 col-md-6 col-md-offset-6">
+                     <h3>Our story</h3>
+                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit.</p>
+                </div>
+            </div>
+        </div>
+    </article>
+    <section class="help sect_pading">
+        <div class="container">
+            <div class="col-md-12">
+                <h2>Live Campaigns</h2>
+            </div>
         </div>
     </section>
     <footer>
         <div class="container">
-                <div class="col-md-12">
-                    footer
-                </div>
+            <div class="col-md-12">
+                footer
+            </div>
         </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+
+
+    <script type="text/javascript" src="script/main.js"></script>
 </body>
+
 </html>
