add  who section

--- a/index.html
+++ b/index.html
@@ -74,10 +74,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2>Live Campaigns</h2>
-                    <!-- <div class="live_campaigns_slider"> -->
-                        <!-- <div> -->
-                            <p id="campaigns_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p>
-
+                            <p class="text_after_hed">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p>
                 </div>
             </div>
         <div class="row">
@@ -183,7 +180,7 @@
                                     <p class="desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore...</p>
                                     <i class="icon_map"></i><span>India</span>
                                     <div class="progres_bar_item">
-                                        <div id="progres_bar_india"></div>
+                                        <div class="progres_bar_india"></div>
                                     </div>
                                     <div class="achievements">
                                         <p><span class="counts">40%</span>
@@ -206,7 +203,7 @@
                                     <p class="desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore...</p>
                                     <i class="icon_map"></i><span>Guatemala</span>
                                     <div class="progres_bar_item">
-                                        <div id="progres_bar_guatemala"></div>
+                                        <div class="progres_bar_guatemala"></div>
                                     </div>
                                     <div class="achievements">
                                         <p><span class="counts counts_guatemala">6%</span>
@@ -238,10 +235,84 @@
             </div>
         </div>
     </article>
-    <section class="help sect_pading">
+    <section class="help section_pading">
         <div class="container">
-            <div class="col-md-12">
-                <h2>Live Campaigns</h2>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 >How can you help</h2>
+                    <p class="text_after_hed">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p>
+                </div>
+           </div> 
+            <div class="help_slider">
+                    <div>
+                        <div class="help_item">
+                            <i class="help_icon"></i>
+                                <h5>Send a donation</h5>
+                                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor.</p>
+                        </div>
+                        <div class="help_item">
+                            <i class="help_icon blood"></i>
+                                <h5>Donate blood</h5>
+                                <p>Mihi vero, inquit, placet agi subtilius et, ut ipse dixisti, pressius. Indicant pueri, in quibus ut in speculis natura cernitur sum esse utilitatem in historia.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="help_item">
+                            <i class="help_icon goods"></i>
+                                <h5>Buy related goods</h5>
+                                <p>At iste non dolendi status non vocatur voluptas. Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit.</p>
+                        </div>
+                        <div class="help_item">
+                            <i class="help_icon volunteer"></i>
+                                <h5>Become a volunteer</h5>
+                                <p>Omnia contraria, quos etiam insanos esse vultis. Quid censes in Latino fore? Negabat igitur ullam esse artem, quae ipsa a se proficisceretur.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="help_item">
+                            <i class="help_icon volunteer"></i>
+                                <h5>Become a volunteer</h5>
+                                <p>Omnia contraria, quos etiam insanos esse vultis. Quid censes in Latino fore? Negabat igitur ullam esse artem, quae ipsa a se proficisceretur.</p>
+                        </div>
+                        <div class="help_item">
+                            <i class="help_icon goods"></i>
+                                <h5>Buy related goods</h5>
+                                <p>At iste non dolendi status non vocatur voluptas. Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="help_item">
+                            <i class="help_icon"></i>
+                                <h5>Send a donation</h5>
+                                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor.</p>
+                        </div>
+                        <div class="help_item">
+                            <i class="help_icon goods"></i>
+                                <h5>Buy related goods</h5>
+                                <p>At iste non dolendi status non vocatur voluptas. Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit.</p>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </section>
+    <article id="goods">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12  col-sm-8  col-sm-offset-4 col-md-6 col-md-offset-6">
+                    <h2>Buy campaign related goods</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur similique est dolorum quam delectus aliquid vitae possimus, cumque atque. Rem, magni dolorem id mollitia dolores aliquid deleniti, iusto a esse inventore, similique animi! Aut nisi itaque maiores quisquam dolor veritatis harum, hic neque magni.</p>
+                    <button class="btn ">Visit Shop</button>
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <section class="donors">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    donors
+                </div>
             </div>
         </div>
     </section>
