done oll first page

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2>Live Campaigns</h2>
-                            <p class="text_after_hed">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p>
+                    <p class="text_after_hed">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p>
                 </div>
             </div>
-        <div class="row">
+            <div class="row">
                 <div class="live_campaigns_slider">
                     <div>
-                        <div class="campaign_item">       
+                        <div class="campaign_item">
                             <div class="campaign_content">
                                 <img src="img/campaigns_content_1.jpg" alt="campaigns content">
                                 <div class="contant_padding">
@@ -100,10 +100,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>     
-                    </div>    
+                        </div>
+                    </div>
                     <div>
-                         <div class=" campaign_item">
+                        <div class=" campaign_item">
                             <div class="campaign_content">
                                 <img src="img/campaigns_content_2.jpg" alt="campaigns content">
                                 <div class="contant_padding">
@@ -123,10 +123,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>  
-                    </div>   
-                     <div> 
-                         <div class="campaign_item">
+                        </div>
+                    </div>
+                    <div>
+                        <div class="campaign_item">
                             <div class="campaign_content">
                                 <img src="img/campaigns_content_3.jpg" alt="campaigns content">
                                 <div class="contant_padding">
@@ -146,10 +146,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>  
+                        </div>
                     </div>
-                    <div>   
-                         <div class="campaign_item">
+                    <div>
+                        <div class="campaign_item">
                             <div class="campaign_content">
                                 <img src="img/campaigns_content_4.jpg" alt="campaigns content">
                                 <div class="contant_padding">
@@ -169,10 +169,10 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                     <div>
-                         <div class="campaign_item">       
+                        <div class="campaign_item">
                             <div class="campaign_content">
                                 <img src="img/campaigns_content_1.jpg" alt="campaigns content">
                                 <div class="contant_padding">
@@ -192,7 +192,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>   
+                        </div>
                     </div>
                     <div>
                         <div class="campaign_item">
@@ -215,12 +215,12 @@
                                     </div>
                                 </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
             </div>
-            </div>
-            <button class="btn all_campaigns">View all campaigns</button>
+        </div>
+        <button class="btn all_campaigns">View all campaigns</button>
         <!-- </div> -->
     </section>
 
@@ -229,8 +229,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12  col-sm-8  col-sm-offset-4 col-md-6 col-md-offset-6">
-                     <h3>Our story</h3>
-                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit.</p>
+                    <h3>Our story</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
+                        nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit.</p>
                 </div>
             </div>
         </div>
@@ -239,59 +240,59 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 >How can you help</h2>
+                    <h2>How can you help</h2>
                     <p class="text_after_hed">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p>
                 </div>
-           </div> 
+            </div>
             <div class="help_slider">
-                    <div>
-                        <div class="help_item">
-                            <i class="help_icon"></i>
-                                <h5>Send a donation</h5>
-                                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor.</p>
-                        </div>
-                        <div class="help_item">
-                            <i class="help_icon blood"></i>
-                                <h5>Donate blood</h5>
-                                <p>Mihi vero, inquit, placet agi subtilius et, ut ipse dixisti, pressius. Indicant pueri, in quibus ut in speculis natura cernitur sum esse utilitatem in historia.</p>
-                        </div>
+                <div>
+                    <div class="help_item">
+                        <i class="help_icon"></i>
+                        <h5>Send a donation</h5>
+                        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor.</p>
                     </div>
-                    <div>
-                        <div class="help_item">
-                            <i class="help_icon goods"></i>
-                                <h5>Buy related goods</h5>
-                                <p>At iste non dolendi status non vocatur voluptas. Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit.</p>
-                        </div>
-                        <div class="help_item">
-                            <i class="help_icon volunteer"></i>
-                                <h5>Become a volunteer</h5>
-                                <p>Omnia contraria, quos etiam insanos esse vultis. Quid censes in Latino fore? Negabat igitur ullam esse artem, quae ipsa a se proficisceretur.</p>
-                        </div>
+                    <div class="help_item">
+                        <i class="help_icon blood"></i>
+                        <h5>Donate blood</h5>
+                        <p>Mihi vero, inquit, placet agi subtilius et, ut ipse dixisti, pressius. Indicant pueri, in quibus ut in speculis natura cernitur sum esse utilitatem in historia.</p>
                     </div>
-                    <div>
-                        <div class="help_item">
-                            <i class="help_icon volunteer"></i>
-                                <h5>Become a volunteer</h5>
-                                <p>Omnia contraria, quos etiam insanos esse vultis. Quid censes in Latino fore? Negabat igitur ullam esse artem, quae ipsa a se proficisceretur.</p>
-                        </div>
-                        <div class="help_item">
-                            <i class="help_icon goods"></i>
-                                <h5>Buy related goods</h5>
-                                <p>At iste non dolendi status non vocatur voluptas. Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit.</p>
-                        </div>
+                </div>
+                <div>
+                    <div class="help_item">
+                        <i class="help_icon goods"></i>
+                        <h5>Buy related goods</h5>
+                        <p>At iste non dolendi status non vocatur voluptas. Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit.</p>
                     </div>
-                    <div>
-                        <div class="help_item">
-                            <i class="help_icon"></i>
-                                <h5>Send a donation</h5>
-                                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor.</p>
-                        </div>
-                        <div class="help_item">
-                            <i class="help_icon goods"></i>
-                                <h5>Buy related goods</h5>
-                                <p>At iste non dolendi status non vocatur voluptas. Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit.</p>
-                        </div>
+                    <div class="help_item">
+                        <i class="help_icon volunteer"></i>
+                        <h5>Become a volunteer</h5>
+                        <p>Omnia contraria, quos etiam insanos esse vultis. Quid censes in Latino fore? Negabat igitur ullam esse artem, quae ipsa a se proficisceretur.</p>
                     </div>
+                </div>
+                <div>
+                    <div class="help_item">
+                        <i class="help_icon volunteer"></i>
+                        <h5>Become a volunteer</h5>
+                        <p>Omnia contraria, quos etiam insanos esse vultis. Quid censes in Latino fore? Negabat igitur ullam esse artem, quae ipsa a se proficisceretur.</p>
+                    </div>
+                    <div class="help_item">
+                        <i class="help_icon goods"></i>
+                        <h5>Buy related goods</h5>
+                        <p>At iste non dolendi status non vocatur voluptas. Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit.</p>
+                    </div>
+                </div>
+                <div>
+                    <div class="help_item">
+                        <i class="help_icon"></i>
+                        <h5>Send a donation</h5>
+                        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor.</p>
+                    </div>
+                    <div class="help_item">
+                        <i class="help_icon goods"></i>
+                        <h5>Buy related goods</h5>
+                        <p>At iste non dolendi status non vocatur voluptas. Praeclare enim Plato: Beatum, cui etiam in senectute contigerit, ut sapientiam verasque opiniones assequi possit.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -300,34 +301,87 @@
             <div class="row">
                 <div class="col-xs-12  col-sm-8  col-sm-offset-4 col-md-6 col-md-offset-6">
                     <h2>Buy campaign related goods</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur similique est dolorum quam delectus aliquid vitae possimus, cumque atque. Rem, magni dolorem id mollitia dolores aliquid deleniti, iusto a esse inventore, similique animi! Aut nisi itaque maiores quisquam dolor veritatis harum, hic neque magni.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur similique est dolorum quam delectus aliquid vitae possimus, cumque atque. Rem, magni dolorem id mollitia dolores aliquid deleniti, iusto a esse inventore, similique
+                        animi! Aut nisi itaque maiores quisquam dolor veritatis harum, hic neque magni.</p>
                     <button class="btn ">Visit Shop</button>
                 </div>
             </div>
         </div>
     </article>
 
-    <section class="donors">
+    <section class="donors section_pading">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    donors
+                    <h2>Best Donors</h2>
+                    <p class="text_after_hed">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p>
+                </div>
+            </div>
+            <div class="donors_slider">
+                <div>
+                    <img src="img/donor_item_1.jpg" alt=" donor name">
+                    <p class="money">$12,840</p>
+                    <p class="donor_name">Peter Thompson</p>
+                </div>
+                <div>
+                    <img src="img/donor_item_2.jpg" alt=" donor name">
+                    <p class="money">$12,840</p>
+                    <p class="donor_name">Peter Thompson</p>
+                </div>
+                <div>
+                    <img src="img/donor_item_3.jpg" alt=" donor name">
+                    <p class="money">$12,840</p>
+                    <p class="donor_name">Peter Thompson</p>
+                </div>
+                <div>
+                    <img src="img/donor_item_4.jpg" alt=" donor name">
+                    <p class="money">$12,840</p>
+                    <p class="donor_name">Peter Thompson</p>
+                </div>
+                <div>
+                    <img src="img/donor_item_5.jpg" alt=" donor name">
+                    <p class="money">$12,840</p>
+                    <p class="donor_name">Peter Thompson</p>
+                </div>
+                <div>
+                    <img src="img/donor_item_3.jpg" alt=" donor name">
+                    <p class="money">$12,840</p>
+                    <p class="donor_name">Peter Thompson</p>
+                </div>
+                <div>
+                    <img src="img/donor_item_5.jpg" alt=" donor name">
+                    <p class="money">$12,840</p>
+                    <p class="donor_name">Peter Thompson</p>
+                </div>
+                <div>
+                    <img src="img/donor_item_1.jpg" alt=" donor name">
+                    <p class="money">$12,840</p>
+                    <p class="donor_name">Peter Thompson</p>
+                </div>
+                <div>
+                    <img src="img/donor_item_2.jpg" alt=" donor name">
+                    <p class="money">$12,840</p>
+                    <p class="donor_name">Peter Thompson</p>
                 </div>
             </div>
         </div>
     </section>
-    <footer>
+    <footer id="footer">
         <div class="container">
             <div class="col-md-12">
-                footer
+                <p> &copy; 2017 All rights reserved</p>
+                <ul>
+                    <li><a href="#">&#8226; About </a></li>
+                    <li><a href="#">&#8226; Blog </a></li>
+                    <li><a href="#">&#8226; Privacy</a></li>
+                    <li><a href="#">&#8226; Policy</a></li>
+                    <li><a href="#">&#8226; Terms of Service</a></li>
+                </ul>
             </div>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-
-
     <script type="text/javascript" src="script/main.js"></script>
 </body>
 
